src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__interaction__interaction_screen_ctrl_p_greyed_without_produce_pr.snap
---
source: src/tui/snapshot_tests/interaction.rs
expression: terminal.backend()
---
"┌─ agent agent  ·  model default  ·  #42 ──────────────────────────────────────────────────────────────────────────────┐"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" Working on issue #42                                                                                                   "
"                                                                                                                        "
" No messages yet — type a prompt below to start.                                                                        "
" Try: "Summarize this issue and propose a step-by-step plan."                                                           "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"[Enter] Send  [Shift+Enter] Newline  [Ctrl+P] /pushup (off)  [Ctrl+L] Clear input  [Ctrl+Q] Quit  [Esc] Back            "
"╔═════════════════════════════════════════════════════[ Message ]══════════════════════════════════════════════════════╗"
"║Type a prompt to begin…                                                                                               ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
