src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__interaction__interaction_screen_one_turn_user.snap
---
source: src/tui/snapshot_tests/interaction.rs
expression: terminal.backend()
---
"┌─ agent agent  ·  model default  ·  #0 ───────────────────────────────────────────────────────────────────────────────┐"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" ╭─ you · 09:00 ──────────────────────────────────────────────────────────────────────────────────────────────────────╮ "
" │ Add a login button                                                                                                 │ "
" ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"[Enter] Send  [Shift+Enter] Newline  [Ctrl+P] /pushup  [Ctrl+L] Clear input  [Ctrl+W] Quit  [Esc] Back  [Up/Down] Scroll"
"╔═════════════════════════════════════════════════════[ Message ]══════════════════════════════════════════════════════╗"
"║Type a prompt to begin…                                                                                               ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
