src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__interaction__interaction_screen_scrolled_up.snap
---
source: src/tui/snapshot_tests/interaction.rs
expression: terminal.backend()
---
"┌─ agent agent  ·  model default  ·  #0 ───────────────────────────────────────────────────────────────────────────────┐"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" ╭─ agent · 09:00 ────────────────────────────────────────────────────────────────────────────────────────────────────╮ "
" │ Message 0                                                                                                          │ "
" ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                                                        "
" ╭─ agent · 09:00 ────────────────────────────────────────────────────────────────────────────────────────────────────╮ "
" │ Message 1                                                                                                          │ "
" ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                                                        "
" ╭─ agent · 09:00 ────────────────────────────────────────────────────────────────────────────────────────────────────╮ "
" │ Message 2                                                                                                          │ "
" ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                                                        "
" ╭─ agent · 09:00 ────────────────────────────────────────────────────────────────────────────────────────────────────╮ "
" │ Message 3                                                                                                          │ "
" ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                                                        "
" ╭─ agent · 09:00 ────────────────────────────────────────────────────────────────────────────────────────────────────╮ "
" │ Message 4                                                                                                          │ "
" ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                                                        "
" ╭─ agent · 09:00 ────────────────────────────────────────────────────────────────────────────────────────────────────╮ "
" │ Message 5                                                                                                          │ "
" ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                                                        "
" ╭─ agent · 09:00 ────────────────────────────────────────────────────────────────────────────────────────────────────╮ "
" │ Message 6                                                                                                          │ "
" ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                                                        "
" ╭─ agent · 09:00 ────────────────────────────────────────────────────────────────────────────────────────────────────╮ "
" │ Message 7                                                                                                          │ "
" ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                                                        "
"[Enter] Send  [Shift+Enter] Newline  [Ctrl+P] /pushup  [Ctrl+L] Clear input  [Ctrl+W] Quit  [Esc] Back  [Up/Down] Scroll"
"╔═════════════════════════════════════════════════════[ Message ]══════════════════════════════════════════════════════╗"
"║Type a prompt to begin…                                                                                               ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
