src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__interaction__interaction_screen_settled_completed_banner.snap
---
source: src/tui/snapshot_tests/interaction.rs
expression: terminal.backend()
---
"┌─ agent agent  ·  model default  ·  #42 ──────────────────────────────────────────────────────────────────────────────┐"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" ╭─ you · HH:MM ──────────────────────────────────────────────────────────────────────────────────────────────────────╮ "
" │ ship it                                                                                                            │ "
" ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"─ Settled from COMPLETED ───────────────────────────────────────────────────────────────────────────────────────────────"
"─ [Enter] Send  [Shift+Enter] Newline  [Ctrl+P] /pushup  [Ctrl+L] Clear input  [Ctrl+W] Quit  [Esc] Back  [Up/Dn/PgUp/Pg"
"╔═════════════════════════════════════════════════════[ Message ]══════════════════════════════════════════════════════╗"
"║Type a prompt to begin…                                                                                               ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
